Configurar Resend para funcionar en Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+  "functions": {
+    "api/send-email.js": {
+      "maxDuration": 10
+    },
+    "api/send-referral.js": {
+      "maxDuration": 10
+    }
+  },
+  "env": {
+    "RESEND_API_KEY": "@resend_api_key"
+  },
   "rewrites": [
     {
       "source": "/(.*)",
