--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
   "name": "SolHub",
   "icons": [
     {
-      "src": "favicon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "favicon-192x192.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ],
