Fix Vercel build: Configure pnpm and update logo implementation

--- a/vercel.json
+++ b/vercel.json
@@ -12,5 +12,7 @@
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "buildCommand": "pnpm build",
+  "installCommand": "pnpm install --frozen-lockfile"
 }
